--- a/style.css
+++ b/style.css
@@ -126,3 +126,12 @@ nav ul li a:hover, a.active{
     display: flex;
     justify-content: space-between;
 }
+#confirmation-message{
+    display: none;
+    color: white;
+    padding: 15px;
+    margin: 10px 10px;
+    background-color: turquoise;
+    box-shadow: 5px 5px 10px;
+    border-radius: 10px;
+}
